# email-reaper-cli

./: Cargo.toml  README.md  install.sh  package-lock.json  package.json
src/: main.rs
