[package]
name = "reaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
json = "0.12.4"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking"] }
scraper = "0.19.0"
selenium-rs = "0.1.2"
thirtyfour = "0.32.0"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
